[package]
name = "ptunp"
version = "0.0.0"
description = "Peer to Peer QUIC based VPN using iroh"
edition = "2024"
repository = "https://github.com/TheButlah/ptunp"
license = "MIT-0 OR Apache-2.0"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
color-eyre = "0.6.5"
tracing = "0.1.41"
