[package]
name = "ptunp"
version = "0.0.0"
description = "Peer to Peer QUIC based VPN using iroh"
edition = "2024"
repository = "https://github.com/TheButlah/ptunp"
license = "MIT-0 OR Apache-2.0"

[dependencies]
anyhow = "1.0.98" # needed for iroh
bytes = "1.10.1"
clap = { version = "4.5.39", features = ["derive"] }
color-eyre = "0.6.5"
const_format = { version = "0.2.34", features = ["rust_1_83"] }
derive_more = { version = "2.0.1", features = ["debug"] }
dynosaur = "0.2.0"
flume = "0.11.1"
futures = "0.3.31"
iroh = "0.35.0"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tun = { version = "0.7.21", features = ["async"] }
